Remove network: host and adaptive Caddyfile for bridge network

--- a/Caddyfile
+++ b/Caddyfile
@@ -4,9 +4,9 @@
 }
 
 vaultwarden.{$DOMAIN} {
-	reverse_proxy localhost:8080
+	reverse_proxy vaultwarden:80
 }
 
 note.{$DOMAIN} {
-	reverse_proxy localhost:7777
+	reverse_proxy flatnotes:8080
 }
