--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,8 @@
 version: "3.7"
-services:
-  caddy:
-    image: caddy:latest
-    restart: unless-stopped
-    env_file: .env
-    networks:
-      - allinone
-    ports:
-      - 80:80
-      - 443:443
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
-      - ./caddy/caddy_site:/srv
-      - ./caddy/caddy_data:/data
-      - ./caddy/caddy_config:/config
- 
-  vaultwarden:
-    container_name: vaultwarden
-    restart: unless-stopped
-    networks:
-      - allinone
-    image: vaultwarden/server:latest
-    volumes:
-      - ./vaultwarden/data:/data
-
-  flatnotes:
-    container_name: flatnotes
-    image: dullage/flatnotes:latest
-    env_file: .env
-    networks:
-      - allinone
-    environment:
-      PUID: 1000
-      PGID: 1000
-    volumes:
-      - "./flatnotes/data:/data"
-    restart: unless-stopped
-
-volumes:
-  caddy_data:
-    external: true
-  caddy_config:
+include:
+    - caddy/compose.yml
+    - vaultwarden/compose.yml
+    - flatnotes/compose.yml
 
 networks:
   allinone:
