--- a/.env.template
+++ b/.env.template
@@ -26,3 +26,5 @@ REDLIB_DEFAULT_HIDE_SIDEBAR_AND_SUMMARY=off
 REDLIB_DEFAULT_DISABLE_VISIT_REDDIT_CONFIRMATION=off
 REDLIB_DEFAULT_HIDE_SCORE=off
 REDLIB_DEFAULT_FIXED_NAVBAR=on
+TZ=changeme
+CRON_MIN=1,31
